--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,187 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    --orange--color: #f15e2c;
+    --white--color: #ffffff;
+    --black-color: #000000;
+    --grey-color: #cccccc;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+@font-face {
+    font-family: GeometricExtraBold;
+    src: url(./fonts/URWGeometricBold.otf);
 }
-a:hover {
-  color: #535bf2;
+
+@font-face {
+    font-family: NunitoSanRegular;
+    src: url(./fonts/NunitoSans_7pt-Regular.ttf);
+}
+
+@font-face {
+    font-family: NunitoSanBold;
+    src: url(./fonts/NunitoSans_7pt-Bold.ttf);
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    font-family: NunitoSanRegular;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.nav-header .dropdown {
+    font-family: GeometricExtraBold;
+    font-size: 23px;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 0.5em 1em;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.nav-header .dropdown a {
+    text-decoration: none;
+    transition: color 0.3s ease;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.nav-header .dropdown > a:hover {
+    color: var(--orange--color) !important;
+}
+
+.nav-header .line {
+    border-right: #e3e2e2 2px solid;
+    margin-top: 22px;
+    height: 23px;
+}
+
+.menu li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.menu li span {
+    padding-left: 8px;
+    font-size: 12px;
+    text-decoration: none;
+    display: inline-block;
+    color: var(--white--color);
+    transition: color 0.3s ease;
+}
+
+.menu li span:hover {
+    color: var(--orange--color);
+}
+
+.header .menu {
+    background: #303030;
+    text-align: right;
+    height: 30px;
+    width: 100%;
+    padding: 3px 60px 0px 0px;
+    overflow: hidden;
+}
+
+.slider {
+    background-color: #f1f1f1;
+    text-align: center;
+    height: 50px;
+}
+
+.slider a {
+    text-decoration: none;
+    color: var(--black-color);
+    font-weight: 600;
+    line-height: 50px;
+}
+
+.slide-item {
+    height: 800px;
+    margin-left: 80px;
+}
+
+.content-text .title {
+    font-family: GeometricExtraBold;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 20px;
+    transition: ease-in-out 0.3s;
+    text-transform: uppercase;
+}
+
+.content-text .title:hover {
+    color: var(--orange--color);
+    cursor: pointer;
+}
+
+.item-bg {
+    position: relative;
+}
+
+.item-group {
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    width: 90%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.item-group .title {
+    font-family: GeometricExtraBold;
+    font-size: 23px;
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 20px;
+    transition: color 0.3s ease;
+}
+
+.item-group .title:hover {
+    color: var(--orange--color);
+    cursor: pointer;
+}
+
+.item-group .sub {
+    font-family: NunitoSanBold;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 5px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.item-group .sub:hover {
+    color: var(--orange--color);
+    cursor: pointer;
+}
+
+.black-bg {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    display: block;
+    width: 96.4%;
+    height: 100%;
+}
+
+footer {
+    background-color: #555555;
+    color: var(--white--color);
+}
+
+.footer-menu h4 {
+    font-family: GeometricExtraBold;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.6rem;
+    word-spacing: 0.2rem;
+}
+
+.footer-menu li a {
+    color: var(--grey-color);
+    font-size: 16px;
+    transition: color 0.25s;
+}
+
+.footer-menu li a:hover {
+    color: var(--orange--color);
 }
